Bugzilla bug 125790: free the nickName and passwd strings